force-app/main/default/objects/Client_BOC__c/Client_BOC__c.object-meta.xml
<CustomObject>
    <label>Client BOC</label>
    <nameField>
        <displayFormat>CBOC-{0000}</displayFormat>
        <label>Client BOC Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client BOC</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>