force-app/main/default/objects/Client_BOC__c/fields/Behaviour_of_Concern__c.field-meta.xml
<CustomField>
    <fullName>Behaviour_of_Concern__c</fullName>
    <label>Behaviour of Concern</label>
    <referenceTo>Behaviour_of_Concern__c</referenceTo>
    <relationshipLabel>Client BOC</relationshipLabel>
    <relationshipName>Client_BOC</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>