force-app/main/default/objects/Client_BOC__c/fields/BOC_Name__c.field-meta.xml
<CustomField>
    <fullName>BOC_Name__c</fullName>
    <formula>Behaviour_of_Concern__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BOC_Name</label>
    <type>Text</type>
</CustomField>