force-app/main/default/objects/Client_BOC__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BOC_Name__c</columns>
    <columns>Client__c</columns>
    <columns>Clinical_Notes__c</columns>
    <columns>Behaviour_of_Concern__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Start_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>